# tiv

./: .gitignore  CMakeLists.txt  makefile  spec.txt
include/: image.h  window.h
src/: image.cpp  image.h  main.cpp  window.cpp
